--- a/css/usersignuppage-styles.css
+++ b/css/usersignuppage-styles.css
@@ -19,7 +19,7 @@
     font-family: Poppins;
 }
 body{
-    background-color: #0693e3;
+    background-color: #bddff3;
 }
 h1,#first{
     text-align: center;
