--- a/css/admindashboard-styles.css
+++ b/css/admindashboard-styles.css
@@ -9,6 +9,8 @@
     display: flex;
     gap: 1rem; 
     padding-top: 2rem;
+    flex-wrap: wrap;
+
 }
 section{
     margin-left: 2rem; 
@@ -31,6 +33,8 @@ section{
     width: 100%;
     table-layout: fixed; 
     border-collapse: collapse;
+    min-width: 790px;
+
 }
 
 #unapproved-table caption {
@@ -76,28 +80,31 @@ input[name="delete"]:hover{
     display: none;
     position:fixed;
     top: 30%;
-    left: 35%;
-    background-color: rgba(255, 188, 126, 0.908);;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
     border-radius: 10px;
     padding: 20px;
     z-index: 1000;
     max-width: 500px;
-    width:30vw;
-    min-width: 400px;
+     width:50vw;
+    min-width: 300px;
 }
 #pop-up2{
     display: none;
     position:fixed;
     top: 30%;
-    left: 35%;
-    background-color: rgba(255, 188, 126, 0.908);;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(247, 98, 98, 0.908);
     border-radius: 10px;
     padding: 20px;
     z-index: 1000;
     max-width: 500px;
-    width:30vw;
-    min-width: 400px;
+     width:50vw;
+    min-width: 300px;
 }
+
 #delete-button{
     padding:0.5rem;
     background-color: rgba(249, 182, 119, 0.908);
@@ -134,4 +141,9 @@ input[name="approve"]{
 input[name="approve"]:hover{
     background-color: rgba(169, 248, 104, 0.908);
     
+}
+.table-container{
+    overflow-x: auto;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
