--- a/css/workerdashboard-styles.css
+++ b/css/workerdashboard-styles.css
@@ -9,6 +9,7 @@
     display: flex;
     gap: 1rem; 
     padding-top: 2rem;
+    flex-wrap: wrap;
 }
 section{
     margin-left: 2rem; 
@@ -35,6 +36,8 @@ section{
     width: 100%;
     table-layout: fixed;  
     border-collapse: collapse;
+    min-width: 790px;
+
 }
 
 #pending-table caption {
@@ -94,14 +97,15 @@ input[name="complete"]:hover{
     display: none;
     position:fixed;
     top: 30%;
-    left: 35%;
-    background-color: rgba(255, 188, 126, 0.908);;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
     border-radius: 10px;
     padding: 20px;
     z-index: 1000;
     max-width: 500px;
-    width:30vw;
-    min-width: 400px;
+     width:50vw;
+    min-width: 300px;
 }
 #approve-button{
     padding:0.5rem;
@@ -112,4 +116,9 @@ input[name="complete"]:hover{
 #approve-button:hover{
     background-color: rgba(169, 248, 104, 0.908);
 
+}
+.table-container{
+    overflow-x: auto;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
