--- a/css/workerhistory-style.css
+++ b/css/workerhistory-style.css
@@ -2,6 +2,8 @@
     width: 100%;
     table-layout: fixed;  
     border-collapse: collapse;
+    min-width: 1200px;
+
 }
 
 #history-table caption {
